RESOLVED FIXED106206
CachedResource::switchClientsToRevalidatedResource() fails to properly remove clients
https://bugs.webkit.org/show_bug.cgi?id=106206
Summary CachedResource::switchClientsToRevalidatedResource() fails to properly remove...
Philip Rogers
Reported 2013-01-06 20:12:19 PST
CachedResource::switchClientsToRevalidatedResource() contains the following: 710 // Equivalent of calling removeClient() for all clients 711 m_clients.clear(); http://trac.webkit.org/browser/trunk/Source/WebCore/loader/cache/CachedResource.cpp?rev=138921#L710 This comment is a lie; m_clients.clear() fails to call didRemoveClient(...) for each client which can lead to clients leaving state around (e.g., CachedImage does cleanup in didRemoveClient(...)).
Attachments
First pass (1.92 KB, patch)
2013-01-06 20:46 PST, Philip Rogers
no flags
Philip Rogers
Comment 1 2013-01-06 20:46:51 PST
Created attachment 181470 [details] First pass
Nate Chapin
Comment 2 2013-01-07 10:12:41 PST
Comment on attachment 181470 [details] First pass To be fair, the comment was true when this code was written :)
Philip Rogers
Comment 3 2013-01-07 10:15:55 PST
Comment on attachment 181470 [details] First pass Thanks for the review!
WebKit Review Bot
Comment 4 2013-01-07 10:33:37 PST
Comment on attachment 181470 [details] First pass Clearing flags on attachment: 181470 Committed r138958: <http://trac.webkit.org/changeset/138958>
WebKit Review Bot
Comment 5 2013-01-07 10:33:42 PST
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.