Refactor client removal in CachedResource::switchClientsToRevalidatedResource https://bugs.webkit.org/show_bug.cgi?id=106206

Previously switchClientsToRevalidatedResource() failed to call didRemoveClient() for each
client and instead simply cleared m_clients. This patch removes an incorrect comment and
refactors the code so that removeClient() and didRemoveClient() are properly called.

Reviewed by Nate Chapin.

No new tests as there are no observable changes from this refactoring.

* loader/cache/CachedResource.cpp:
(WebCore::CachedResource::switchClientsToRevalidatedResource):


Canonical link: https://commits.webkit.org/124421@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@138958 268f45cc-cd09-0410-ab3c-d52691b4dbfc